[gd_scene load_steps=6 format=3 uid="uid://d11r447pm7biw"]

[ext_resource type="Script" uid="uid://bymrc7ke5qx1c" path="res://looping_componenet.gd" id="1_hs47p"]
[ext_resource type="Texture2D" uid="uid://bacuwyembhans" path="res://tl.png" id="2_voox1"]
[ext_resource type="Texture2D" uid="uid://cp3j8hfieddqp" path="res://tr.png" id="3_tg5oj"]
[ext_resource type="Texture2D" uid="uid://byfkprml0ucro" path="res://bl.png" id="4_fb2xd"]
[ext_resource type="Texture2D" uid="uid://cnio2qwsjx4xj" path="res://br.png" id="5_ub1v0"]

[node name="Looping_Componenet" type="Node2D"]
script = ExtResource("1_hs47p")

[node name="top_left" type="Node2D" parent="."]

[node name="Debug_sprite" type="Sprite2D" parent="top_left"]
modulate = Color(1, 0, 1, 0.588235)
texture = ExtResource("2_voox1")

[node name="top_right" type="Node2D" parent="."]

[node name="Debug_sprite" type="Sprite2D" parent="top_right"]
modulate = Color(1, 0, 1, 0.588235)
texture = ExtResource("3_tg5oj")

[node name="bottom_left" type="Node2D" parent="."]

[node name="Debug_sprite" type="Sprite2D" parent="bottom_left"]
modulate = Color(1, 0, 1, 0.588235)
texture = ExtResource("4_fb2xd")

[node name="bottom_right" type="Node2D" parent="."]

[node name="Debug_sprite" type="Sprite2D" parent="bottom_right"]
modulate = Color(1, 0, 1, 0.588235)
texture = ExtResource("5_ub1v0")
